# lichen

./: .gitignore  CMakeLists.txt  Lichen  ReadMe.md  activation_record_tests[1]_include.cmake  main.cpp
cmake_modules/: FindSoundIo.cmake
libAlgae_dsp/: dsp.h
libAlgae_dsp/src/: buffered_node.h
libDSP/: dsp.h
libFungi_interpreter/src/: eval.cpp  eval.h
libFungi_interpreter/src/interpreter/: activation_record.h  algae_bridge.h  call_stack.h  data_varient.h  either.h  error.h  interpreter.h  library.h  maybe.h  runtime_error.h  scoped_symbol_table.h  semantic_analyzer.h  signal_wrapper.h  symbol.h  syntax_error.h
libFungi_interpreter/src/lang/: interpreter_interface.h  sporelang_bison.y  sporelang_flex.l  sporelang_syntaxtree.cpp  sporelang_syntaxtree.h
libFungi_interpreter/test/: activation_record_test.cpp  data_variant_test.cpp  either_test.cpp  eval_test.cpp  interpreter_test.cpp  maybe_test.cpp  scoped_symbol_table_test.cpp  semantic_analyzer_test.cpp  signal_wrapper_test.cpp  symbol_variant_test.cpp  varient_test.cpp
libFungi_lua_interpreter/: interpreter.cpp  interpreter.h
libFungi_lua_interpreter/src/: algae_bindings.h  either.h  error.h  maybe.h  signal_wrapper.h
libFungi_lua_interpreter/test/: either_test.cpp  interpreter_test.cpp  maybe_test.cpp  signal_wrapper_test.cpp
